2009-10-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Tests/test-maildav.py (DAVMailCollectionTest._putMessage):
	messages have "message/rfc822" mime-type.
	(DAVMailCollectionTest.setUp): use servername

2009-09-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m (-init): removed "ldapConnection"
	ivar, since we now always use it as an autoreleased local value.
	(-_ldapConnection): modified implementation of
	"_initLDAPConnection" that now returns an autoreleased instance of
	NGLdapConnection or nil.

	* UI/MailerUI/UIxMailMainFrame.m (-_setupContext): if
	"moduleSettings" is non-nil, we don't reset it in the user
	defaults.
	(-composeAction): autorelease "addresses" to avoid a leak.

2009-09-29  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m (PUTAction:, _appendMessageData:usingId:):
	Added new methods to enable MailDAV PUT on a collection.
	* SoObjects/Mailer/SOGoMailBaseObject.m (IMAP4IDFromAppendResult:): Moved
	here, since SOGoDraftObject and SOGoMailFolder need it.
	* SoObjects/Mailer/SOGoDraftObject.m (_IMAP4IDFromAppendResult): Removed, 
	replaced by [SOGoMailBaseObject IMAP4IDFromAppendResult:].
	* SoObjects/SOGo/SOGoObject.m: Changed file extension from "mail" to "eml".
	* SoObjects/Mailer/SOGoMailAccount.m: Added accountName to fix errors in MailDAV.
	* SoObjects/Mailer/SOGoMailAccounts.m: Added management for account names
	to fix errors in MailDAV.
	* SoObjects/Mailer/SOGoMailFolder.m (appendMessage:): Added this method to
	facilitate the PUT from a SOGoMailObject.
	* SoObjects/Mailer/SOGoMailObject.m (PUTAction:): Added to enable MailDAV
	PUT on a non-existing object.
	* UI/MailerUI/UIxMailMainFrame.m (mailAccounts): Changed the return value to
	include both the account name and display name.
	* UI/MailerUI/UIxMailMainFrame.m: Fixed an error when composing from the
	Address Book module.

2009-09-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
